# LearnDesign

./: .gitignore  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
include/: CloseMedia.h  InitMedia.h  LoadMedia.h  Media.h  Num1.h  SDLWindow.h  State.h  State1.h  State2.h  StateMachine.h  UpdateMedia.h  WindowSingleton.h
src/: InitMedia.cpp  LoadMedia.cpp  Num1.cpp  SDLWindow.cpp  State.cpp  State1.cpp  State2.cpp  StateMachine.cpp  UpdateMedia.cpp  WindowSingleton.cpp  main.cpp
